cminusgrammar.txt
1. translation_unit
	: compilerdir_or_external_declaration { compilerdir_or_external_declaration }


2. compilerdir_or_external_declaration
	: define_directive
	| external_declaration
	

3. define_directive
	: POUND DEFINE IDENTIFIER define_type 


4. define_type
	: CONST
	| STRING_LITERAL

5. external_declaration
    : type_specifier external_next
    | choose_declarator function_definition
    | type_qualifier type_specifier init_declarator_list SEMICOLON { declaration_specifiers SEMICOLON }
    | TYPEDEF type_specifier SEMICOLON { declaration_specifiers SEMICOLON }


6. external_next
    : choose_declarator external_next2

7. external_next2
    : external_init_declarator_list SEMICOLON { declaration_specifiers SEMICOLON }
	| function_definition 

8. external_init_declarator_list
    : init_declarator { COMMA choose_declarator init_declarator }

8. function_definition
	: declaration_list compound_statement
	| compound_statement


9. declaration
	: declaration_specifiers SEMICOLON { declaration_specifiers SEMICOLON }


10. declaration_specifiers
	: type_qualifier_specifier init_declarator_list 
	| TYPEDEF type_specifier


11. type_qualifier_specifier
	: type_qualifier type_specifier
	| type_specifier


12. type_qualifier
	: CONST	


13. type_specifier
	: VOID
	| CHAR	
	| INT
	| struct_specifier
	| TYPE_NAME
		

14. init_declarator_list
	: choose_declarator init_declarator { COMMA choose_declarator init_declarator }
	


15. init_declarator
	: EQ_OP initializer
	| EPSILON

16. parameter_list
	: parameter_declaration { COMMA parameter_declaration}


17. parameter_declaration
	: declaration_specifiers parameter_declaration_next

	
18. parameter_declaration_next
	: pointer choose_declarator
	| EPSILON

19. choose_declarator
    : IDENTIFIER
    | choose_declarator_next
    | EPSILON

20. choose_declarator_next
    : OPEN_PAREN choose_declarator_next1
    | OPEN_BRACKET choose_declarator_next2

21. choose_declarator_next1
    : CLOSE_PAREN choose_declarator_next3
    | parameter_list CLOSE_PAREN choose_declarator_next3
    | pointer choose_declarator CLOSE_PAREN
    | identifier_list CLOSE_PAREN choose_declarator

22. choose_declarator_next2
    : logical_or_expression CLOSE_BRACKET choose_declarator_next3
    | CLOSE_BRACKET choose_declarator_next3

23. choose_declarator_next3
    : choose_declarator { direct_declarator_next }

24. identifier_list
	: IDENTIFIER { COMMA IDENTIFIER }
	
25. initializer
	: assignment_expression
	| OPEN_BRACE ZERO CLOSE_BRACE 
		
26. type_name
	: type_qualifier_specifier type_name_next

27. type_name_next
	: pointer choose_declarator 
	| EPSILON


28. direct_abstract_declarator
	: CLOSE_BRACKET
	| logical_or_expression CLOSE_BRACKET


29. direct_abstract_declarator_next
	: OPEN_BRACKET direct_abstract_declarator_next
	| OPEN_PAREN direct_abstract_declarator_next1

	
30. direct_abstract_declarator_next1
	: CLOSE_PAREN
	| parameter_list CLOSE_PAREN


31. struct_specifier
	: STRUCT struct_specifier_next


32. struct_specifier_next
	: IDENTIFIER struct_specifier_cont 
	| OPEN_BRACE struct_declaration_list CLOSE_BRACE

33. struct_specifier_cont
	: OPEN_BRACE struct_declaration_list CLOSE_BRACE
	| EPSILON

34. struct_declaration_list
	: struct_declaration { struct_declaration }
	

35. struct_declaration
	: type_specifier struct_declarator_list SEMICOLON


36. struct_declarator_list
	: choose_declarator { COMMA choose_declarator }


37. enum_specifier
	: ENUM OPEN_BRACE enumerator_list CLOSE_BRACE

	
38. enumerator_list
	: IDENTIFIER { COMMA IDENTIFIER }


39. pointer
	: POINTER pointer_next

	
40. pointer_next
	: type_qualifier optional_pointer
	| pointer
	| EPSILON

41. optional_pointer
  	: pointer
	| EPSILON

42. primary_expression
	: IDENTIFIER
	| CONST
	| STRING_LITERAL
	| OPEN_PAREN expression CLOSE_PAREN
	
43. postfix_expression
	: primary_expression { postfix_expression_next }

44. postfix_expression_next
	: OPEN_BRACKET expression CLOSE_BRACKET
	| OPEN_PAREN postfix_expression_next_brace
	| PERIOD IDENTIFIER
	| PTR_OP IDENTIFIER
	| INC_OP
	| DEC_OP

45. postfix_expression_next_brace
	: CLOSE_PAREN
	| argument_expression_list CLOSE_PAREN


46. argument_expression_list
	: assignment_expression { COMMA assignment_expression }


47. unary_expression
	: postfix_expression
	| INC_OP unary_expression
	| DEC_OP unary_expression
	| unary_operator unary_expression
	| SIZEOF unary_expression_sizeof


48. unary_expression_sizeof
	: OPEN_PAREN unary_expression_sizeof_cont
	
49. unary_expression_sizeof_cont
	: type_specifier CLOSE_PAREN
	| IDENTIFIER CLOSE_PAREN

50. unary_operator
	: ADDRESS_OP
	| POINTER
	| POS 
	| NEG	
	| NOT 


51. multiplicative_expression
	: unary_expression { (MULT|DIVIDE|MOD) unary_expression }


52. additive_expression
	: multiplicative_expression { (PLUS|MINUS) multiplicative_expression }



53. relational_expression
	: additive_expression { (L_OP|G_OP|LE_OP|GE_OP)  additive_expression }


54. equality_expression
	: relational_expression { (EQ_OP|NE_OP) relational_expression }

	
55. logical_and_expression
	: equality_expression { AND_OP equality_expression }

	
56. logical_or_expression
	: logical_and_expression { OR_OP logical_and_expression }


57. assignment_expression
	: unary_expression { EQ_OP assignment_expression }
	

58. expression
	: assignment_expression { COMMA assignment_expression }

	
59. statement
    : compound_statement
	| selection_statement
	| iteration_statement
	| jump_statement


60. compound_statement
	: OPEN_BRACE compound_statement_next


61. compound_statement_next
	: CLOSE_BRACE
	| compound_statement { statement } CLOSE_BRACE
	| selection_statement { statement } CLOSE_BRACE
	| iteration_statement { statement } CLOSE_BRACE
	| CONTINUE SEMICOLON { statement } CLOSE_BRACE
	| BREAK SEMICOLON { statement } CLOSE_BRACE
	| INC_OP unary_expression { EQ_OP assignment_expression } { COMMA assignment_expression } expression SEMICOLON {statement} CLOSE_BRACE
	| DEC_OP unary_expression { EQ_OP assignment_expression } { COMMA assignment_expression } expression SEMICOLON {statement} CLOSE_BRACE
	| IDENTIFIER { postfix_expression_next } { EQ_OP assignment_expression } { COMMA assignment_expression } expression SEMICOLON {statement} CLOSE_BRACE
	| STRING_LITERAL { postfix_expression_next } { EQ_OP assignment_expression } { COMMA assignment_expression } expression SEMICOLON {statement} CLOSE_BRACE
	| OPEN_PAREN expression CLOSE_PAREN { postfix_expression_next } { EQ_OP assignment_expression } { COMMA assignment_expression } expression SEMICOLON {statement} CLOSE_BRACE
	| unary_operator unary_expression { EQ_OP assignment_expression } { COMMA assignment_expression } expression SEMICOLON {statement} CLOSE_BRACE
	| SIZEOF unary_expression_sizeof { EQ_OP assignment_expression } { COMMA assignment_expression } expression SEMICOLON {statement} CLOSE_BRACE
	| SEMICOLON {statement} CLOSE_BRACE
    | CONST compound_statement_next1
	| TYPEDEF type_specifier SEMICOLON {declaration_specifiers SEMICOLON } { declaration } statement_list CLOSE_BRACE
	| type_specifier init_declarator_list SEMICOLON {declaration_specifiers SEMICOLON } { declaration } statement_list CLOSE_BRACE


63. compound_statement_next1
	| { postfix_expression_next } { EQ_OP assignment_expression } { COMMA assignment_expression } expression SEMICOLON {statement} CLOSE_BRACE
    | type_specifier init_declarator_list SEMICOLON {declaration_specifiers SEMICOLON } { declaration } statement_list CLOSE_BRACE
	

62. statement_list
	: statement { statement }
	

63. declaration_list
	: declaration { declaration }

64. jump_statement
	: CONTINUE SEMICOLON
	| BREAK SEMICOLON
	| expression_statement

65. selection_statement
	: IF OPEN_PAREN expression CLOSE_PAREN statement selection_statement_next

66. expression_statement
    : SEMICOLON
    | expression SEMICOLON

67. selection_statement_next
	: ELSE statement
	| EPSILON		


68. iteration_statement
	: WHILE OPEN_PAREN expression CLOSE_PAREN statement
